activity covers cover correctly

--- a/src/sass/partials/activities.scss
+++ b/src/sass/partials/activities.scss
@@ -1,4 +1,42 @@
 
 #activities{
+
+    .activity-container{
+        .row{
+            position: relative;
+        }
+    }
+    .activity-cover-container{
+        display: flex;
+        position: absolute;
+        z-index: 2;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 16em;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+
+        .activity-cover{
+            width: 100%;
+            height: 100%;
+            background-color: $bg-dark;
+        }
+    }
+
+    .activity-image{
+        width: 100%;
+        height: 16em;
+        background-color: $bg-dark;
+        margin: 0;
+    }
+
+
+    @media only screen and (max-width: $sm) {
+        .activity-image{
+            height: 8em;
+        }
+    }
 }
 
